started making models for each 'move'

--- a/below_root/templates/board.html
+++ b/below_root/templates/board.html
@@ -1,18 +1,12 @@
 {% extends "root.html" %}
-
-<html>
-  <head>
-    <title>mastermind!</title>
-  </head>
-  <body>
-      <h1> Hello!</h1>
+      
 
       {% block content %}
+      <h1> Tic Tac Toe!</h1>
+
       <div id="top"> {{ board_1 }} </div>
       <div id="middle"> {{ board_2 }} </div>
       <div id="bottom"> {{ board_3 }} </div>
       <!--<div> {{ board }}-->
       {% endblock %}
       
-  </body>
-</html>
