--- a/below_root/templates/root.html
+++ b/below_root/templates/root.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title>mastermind!</title>
+    <title>tic-tac-toe!</title>
   </head>
   <body>
-      <h1> Hello!</h1>
+      
       {% block content %}
+      <h1> Hello!</h1>
       {% endblock %}
   </body>
 </html>
