forms nearly working

--- a/below_root/templates/board.html
+++ b/below_root/templates/board.html
@@ -8,5 +8,9 @@
       <div id="middle"> {{ board_2 }} </div>
       <div id="bottom"> {{ board_3 }} </div>
       <!--<div> {{ board }}-->
+      <form action="" method="POST">
+        <p>{{ form.x_or_o.label }} {{ form.x_or_o }} </p>
+        <p><input class="large round button" type="submit" value="Register"></p>
+      </form>
       {% endblock %}
       
