form working but needs to roll over now, config setup as well

--- a/below_root/templates/board.html
+++ b/below_root/templates/board.html
@@ -10,7 +10,7 @@
       <!--<div> {{ board }}-->
       <form action="" method="POST">
         <p>{{ form.x_or_o.label }} {{ form.x_or_o }} </p>
-        <p><input class="large round button" type="submit" value="Register"></p>
+        <p><input class="large round button" type="submit" value="Submit"></p>
       </form>
       {% endblock %}
       
